--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1> titulo</ h1 >
+<h1>lanchonete magia alta</h1>
+<p>aqui seus lanches sao magicos ,magicos como voce</p>
+<p>localizada ao lado do parque lacustre<p>
+
+<p>corre pra garantir seu magico lanche</p>
